Fix zooming on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
   min-width: 500px;
 }
 
+html, body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
